<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/id_about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/city_choose_bg">

        <ImageButton
            android:id="@+id/id_about_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/back_imgbtn_bg"
            android:contentDescription="返回"
            android:onClick="onClickEvents" />

        <TextView
            android:id="@+id/id_about_back_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="onClickEvents"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:text="@string/str_about"
            android:textColor="@color/colorDayWhite"
            android:textSize="@dimen/status_bar_textsize" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_distance"
            android:text="@string/app_name"
            android:textColor="#8d8d8d" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_distance"
            android:text="@string/str_data_source"
            android:textSize="10sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_item_padding"
        android:gravity="center"
        android:text="@string/str_copyright"
        android:textSize="10sp" />
</LinearLayout>